update the savi env configuration